deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reims2
  labels:
    name: reims2
    environment: production
